other/deny-secret-service-account-token-type/.kyverno-test/resource.yaml
apiVersion: v1
kind: Secret
metadata:
  name: bad-secret
  annotations:
    kubernetes.io/service-account.name: build-robot
type: kubernetes.io/service-account-token
---
apiVersion: v1
kind: Secret
metadata:
  name: good-secret
type: kubernetes.io/basic-auth
stringData:
  username: admin 
  password: t0p-Secret 
---
apiVersion: v1
kind: Secret
metadata:
  name: no-type-secret
stringData:
  username: admin 
  password: t0p-Secret
