other/deny-secret-service-account-token-type/.kyverno-test/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: deny-secret-service-account-token-type
policies:
- ../deny-secret-service-account-token-type.yaml
resources:
- resource.yaml
results:
- kind: Secret
  policy: deny-secret-service-account-token-type
  resources:
  - bad-secret
  result: fail
  rule: deny-secret-service-account-token-type
- kind: Secret
  policy: deny-secret-service-account-token-type
  resources:
  - good-secret
  result: pass
  rule: deny-secret-service-account-token-type
- kind: Secret
  policy: deny-secret-service-account-token-type
  resources:
  - no-type-secret
  result: pass
  rule: deny-secret-service-account-token-type
